@@ -1,6 +1,13 @@
 2008-05-07  Ivan Frade  <ivan.frade@nokia.com>
 
 	* src/trackerd/tracker-db-sqlite.c
+	* src/trackerd/tracker-db.c
+	* src/trackerd/tracker-db-sqlite.h:
+	Removed DBConnection from ServiceTypeInfo struct.
+
+2008-05-07  Ivan Frade  <ivan.frade@nokia.com>
+
+	* src/trackerd/tracker-db-sqlite.c
 	* src/trackerd/tracker-db-sqlite.h
 	* src/trackerd/trackerd.c:
 	(tracker_db_initialize -> tracker_db_load_prepared_queries)
